--- a/app/globals.css
+++ b/app/globals.css
@@ -18,16 +18,20 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: white;
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+}
+
+@media (max-width: 1024px) {
+  aside {
+    transition: all 0.3s ease;
+  }
+  aside.closed {
+    transform: translatex(-100%);
   }
 }
