login, registration and logout

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,23 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+input {
+  @apply w-64 sm:w-[400px] border border-gray-300/70 py-2 px-6 bg-zinc-100/40;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: white;
+  color: #424242;
+  background: #eee;
 }
 
 @layer utilities {
