--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,11 @@
 @tailwind utilities;
 
 input {
-  @apply w-64 sm:w-[400px] border border-gray-300/70 py-2 px-6 bg-zinc-100/40;
+  @apply w-64 sm:w-[400px] border border-gray-300/70 py-2 px-3 bg-zinc-100/40 focus-visible:border-gray-400 focus:!border-gray-400 focus:!outline-none;
+}
+
+select {
+  @apply w-36 h-7 px-1.5 cursor-pointer border focus-visible:border-gray-400 focus:!border-gray-400 focus:!outline-none;
 }
 
 body {
